Linked in the JS file to work with

--- a/boilerplate.html
+++ b/boilerplate.html
@@ -12,6 +12,9 @@
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
+		<!-- Our application -->
+		<script src="app.js"></script>
 	</head>
 	<body class="container">
 		
