Adding some classes to inputs

--- a/boilerplate.html
+++ b/boilerplate.html
@@ -28,7 +28,7 @@
 				<span class="input-group-addon">
 					<span class="glyphicon glyphicon-search"></span>
 				</span>
-				<input type="text" class="form-control" placeholder="Search">
+				<input type="text" class="form-control js-search" placeholder="Search">
 			</div>
 		</div>
 
@@ -67,10 +67,10 @@
 		<!-- The new box -->
 		<div class="row">
 			<div class="col-md-6">
-				<input type="text" placeholder="Description" class="form-control"/>
+				<input type="text" placeholder="Description" class="form-control js-description"/>
 			</div>
 			<div class="col-md-4">
-				<input type="text" placeholder="Link" class="form-control"/>
+				<input type="text" placeholder="Link" class="form-control js-link"/>
 			</div>
 			<div class="col-md-2">
 				<button class="js-add-link btn btn-default">+</button>
