--- a/index.html
+++ b/index.html
@@ -74,5 +74,16 @@
 			</div>
 		</div>
 
+		<script type="text/template" id="single-row-template">
+		<div class="row">
+			<div class="col-xs-10 lead text-center">
+				<a href="<%= link %>"><%= description %></a>
+			</div>
+			<div class="col-xs-2">
+				<button class="js-add-link btn btn-default">&times;</button>
+			</div>
+		</div>
+		</script>
+
 	</body>
 </html>
