Added container to boilerplate to help out the view

--- a/boilerplate.html
+++ b/boilerplate.html
@@ -37,30 +37,32 @@
 		<br/>
 
 		<!-- The "dynamic" rows-->
-		<div class="row">
-			<div class="col-xs-10 lead text-center">
-				<a href="http://backbonejs.org">Backbone.js</a>
+		<div id="row-container">
+			<div class="row">
+				<div class="col-xs-10 lead text-center">
+					<a href="http://backbonejs.org">Backbone.js</a>
+				</div>
+				<div class="col-xs-2">
+					<button class="js-add-link btn btn-default">&times;</button>
+				</div>
 			</div>
-			<div class="col-xs-2">
-				<button class="js-add-link btn btn-default">&times;</button>
-			</div>
-		</div>
 
-		<div class="row">
-			<div class="col-xs-10 lead text-center">
-				<a href="http://underscorejs.org">Underscore.js</a>
+			<div class="row">
+				<div class="col-xs-10 lead text-center">
+					<a href="http://underscorejs.org">Underscore.js</a>
+				</div>
+				<div class="col-xs-2">
+					<button class="js-add-link btn btn-default">&times;</button>
+				</div>
 			</div>
-			<div class="col-xs-2">
-				<button class="js-add-link btn btn-default">&times;</button>
-			</div>
-		</div>
 
-		<div class="row">
-			<div class="col-xs-10 lead text-center">
-				<a href="http://coffeescript.org">CoffeeScript</a>
-			</div>
-			<div class="col-xs-2">
-				<button class="js-add-link btn btn-default">&times;</button>
+			<div class="row">
+				<div class="col-xs-10 lead text-center">
+					<a href="http://coffeescript.org">CoffeeScript</a>
+				</div>
+				<div class="col-xs-2">
+					<button class="js-add-link btn btn-default">&times;</button>
+				</div>
 			</div>
 		</div>
 		
