Finding bugs in notes, rendering empty list

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<br/>
 
 		<!-- The "dynamic" rows-->
+		<div id="row-container">
 		<div class="row">
 			<div class="col-xs-10 lead text-center">
 				<a href="http://backbonejs.org">Backbone.js</a>
@@ -60,7 +61,7 @@
 				<button class="js-add-link btn btn-default">&times;</button>
 			</div>
 		</div>
-		
+		</div>
 		<!-- The new box -->
 		<div class="row">
 			<div class="col-md-6">
