Putting app in wrapper div

--- a/boilerplate.html
+++ b/boilerplate.html
@@ -20,7 +20,8 @@
 		<!-- Our application -->
 		<script src="app.js"></script>
 	</head>
-	<body class="container">
+	<body>
+		<div class="container">
 		
 		<!-- The search box -->
 		<div class="row">
@@ -79,5 +80,6 @@
 			</div>
 		</div>
 
+		</div>
 	</body>
 </html>
