Adding deletion to the app

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<a href="<%= link %>"><%= description %></a>
 			</div>
 			<div class="col-xs-2">
-				<button class="js-add-link btn btn-default">&times;</button>
+				<button class="js-delete-link btn btn-default" id="<%= id %>">&times;</button>
 			</div>
 		</div>
 		</script>
